--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -3,3 +3,11 @@
  @plugin "daisyui" {
    themes: light --default, dark --prefersdark;
  }
+
+html, body {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-stretch: 100%;
+
+}
